<resources>
    <string name="app_name">Geometry</string>
    <string name="tv_name">Adriano Maciel Sanchez</string>
    <string name="tv_ra">1110482313018</string>
    <string name="mi_rectangle">Rectangle</string>
    <string name="mi_circle">Circle</string>
    <string name="et_base_rectangle">Base</string>
    <string name="et_height_rectangle">Height</string>
    <string name="bt_area">Area</string>
    <string name="bt_perimeter">Perimeter</string>
    <string name="et_radius_circle">Radius</string>
    <string name="error_alert_title">Error!</string>
    <string name="invalid_input_message">Invalid input!</string>
</resources>